--- a/Margaret_files/style.css
+++ b/Margaret_files/style.css
@@ -1,74 +1,78 @@
 html {
-  font-size: 100%;
-  overflow-y: scroll;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+	font-size: 100%;
+	overflow-y: scroll;
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
+}
+
+:root {
+	--bg: #fefefe;
+	--fg: #444;
+	--link: #0645ad;
+	--link_v: #0b0080;
+	--link_h: #06e;
+	--bg_grey: #eee;
+	--dark_grey: #999;
+}
+[data-theme="dark"] {
+	--bg: #222;
+	--fg: #fefefe;
+	--link: #4d7dcb;
+	--link_v: #99a5d3;
+	--link_h: #4c7ecf;
+	--bg_grey: #333;
+	--dark_grey: #333;
+}
+
+
+.logo {
+	max-height: 30px
 }
 
 body {
-  color: #444;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 12px;
-  line-height: 1.5em;
-  padding: 1em;
-  margin: auto;
-  max-width: 52em;
-  background: #e0e0e0;
+	color: var(--fg);
+	font-family: 'Open Sans', sans-serif;
+	font-size: 12px;
+	line-height: 1.5em;
+	padding: 1em;
+	margin: auto;
+	max-width: 52em;
+	background: var(--bg);
 }
 
 a {
-  color: #0645ad;
-  text-decoration: none;
+	color: var(--link);
+	text-decoration: none;
 }
 
 a:visited {
-  color: #0b0080;
+	color: var(--link_v);
 }
 
 a:hover {
-  color: #06e;
-  cursor:pointer;
+	color: var(--link_h);
+	cursor:pointer;
 }
 
 a:active {
-  color: #faa700;
+	color: var(--link_h);
 }
 
 a:focus {
-  outline: thin dotted;
+	outline: thin dotted;
 }
 
 a:hover,
 a:active {
-  outline: 0;
-}
-
-::-moz-selection {
-  background: rgba(255, 255, 0, 0.3);
-  color: #000;
-}
-
-::selection {
-  background: rgba(255, 255, 0, 0.3);
-  color: #000;
-}
-
-a::-moz-selection {
-  background: rgba(255, 255, 0, 0.3);
-  color: #0645ad;
-}
-
-a::selection {
-  background: rgba(255, 255, 0, 0.3);
-  color: #0645ad;
+	outline: 0;
 }
 
 p {
-  margin: 1em 0;
+	margin: 1em 0;
 }
 
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
 
 h1,
@@ -77,290 +81,278 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 600;
-  color: #111;
-  line-height: 1em;
+	font-weight: 600;
+	color: var(--fg);
+	line-height: 1em;
 }
 
 h4,
 h5,
 h6 {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 h1 {
-  font-size: 1.5em;
+	font-size: 1.5em;
 }
 
 h2 {
-  font-size: 1.2em;
+	font-size: 1.2em;
 }
 
 h3 {
-  font-size: 1em;
+	font-size: 1em;
 }
 
 h4 {
-  font-size: 0.9em;
+	font-size: 0.9em;
 }
 
 h5 {
-  font-size: 0.9em;
+	font-size: 0.9em;
 }
 
 h6 {
-  font-size: 0.9em;
+	font-size: 0.9em;
 }
 
 blockquote {
-  color: #666666;
-  margin: 0;
-  padding-left: 3em;
-  border-left: 0.5em #eee solid;
-}
-
-hr {
-  display: block;
-  border: 0;
-  border-top: 1px solid #aaa;
-  border-bottom: 1px solid #eee;
-  margin: 1em 0;
-  padding: 0;
+	color: var(--fg);
+	margin: 0;
+	padding-left: 3em;
+	border-left: 0.5em var(--dark_grey) solid;
 }
 
 pre,
 code,
 kbd,
 samp {
-  font-family: 'Fira Code', monospace;
-  font-size: 0.98em;
+	font-family: 'Fira Code', monospace;
+	font-size: 0.98em;
 }
 
-pre {
-  white-space: pre;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-  background-color: #eee;
-  padding: 10px 15px;
+code {
+	white-space: pre;
+	white-space: pre-wrap;
+	word-wrap: break-word;
+	background: var(--bg_grey);
+	color: var(--fg);
+	padding: 3px;
+	border-radius: 3px;
 }
-
+pre > code {
+	display: block;
+	padding: 10px 15px;
+}
 b,
 strong {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 dfn {
-  font-style: italic;
+	font-style: italic;
 }
 
-ins {
-  background: #ff9;
-  color: #000;
-  text-decoration: none;
-}
-
-mark {
-  background: #ff0;
-  color: #000;
-  font-style: italic;
-  font-weight: bold;
-}
 
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
 }
 
 sup {
-  top: -0.5em;
+	top: -0.5em;
 }
 
 sub {
-  bottom: -0.25em;
+	bottom: -0.25em;
 }
 
 ul,
 ol {
-  margin: 1em 0;
-  padding: 0 0 0 2em;
+	margin: 1em 0;
+	padding: 0 0 0 2em;
 }
 
 li p:last-child {
-  margin: 0;
+	margin: 0;
 }
 
 dd {
-  margin: 0 0 0 2em;
+	margin: 0 0 0 2em;
 }
 
 img {
-  border: 0;
-  -ms-interpolation-mode: bicubic;
-  vertical-align: middle;
+	border: 0;
+	-ms-interpolation-mode: bicubic;
+	vertical-align: middle;
 }
 
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
 td {
-  vertical-align: top;
+	vertical-align: top;
 }
 
-@media only screen and (min-width: 480px) {
-  body {
-    font-size: 14px;
-  }
-  .logo {
-      max-height: 30px
-  }
+@media only screen and (max-width: 768px) {
+	body {
+		font-size: 14px;
+	}
+	.sitename {
+		display: none;
+	}
 }
 
 @media only screen and (min-width: 768px) {
-  body {
-    font-size: 16px;
-  }
-  .logo {
-      max-height: 40px;
-  }
-  article {
-      margin: 50px 0;
-  }
+	body {
+		font-size: 16px;
+	}
+	.logo {
+		max-height: 40px;
+	}
+	article {
+		margin: 50px 0;
+	}
 }
 
 @media print {
-  * {
-    background: transparent !important;
-    color: black !important;
-    filter: none !important;
-    -ms-filter: none !important;
-  }
+	* {
+		background: transparent !important;
+		color: black !important;
+		filter: none !important;
+		-ms-filter: none !important;
+	}
 
-  body {
-    font-size: 12pt;
-    max-width: 100%;
-  }
+	body {
+		font-size: 12pt;
+		max-width: 100%;
+	}
 
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
+	a,
+	a:visited {
+		text-decoration: underline;
+	}
 
-  hr {
-    height: 1px;
-    border: 0;
-    border-bottom: 1px solid black;
-  }
+	hr {
+		height: 1px;
+		border: 0;
+		border-bottom: 1px solid black;
+	}
 
-  a[href]:after {
-    content: " (" attr(href) ")";
-  }
+	a[href]:after {
+		content: " (" attr(href) ")";
+	}
 
-  abbr[title]:after {
-    content: " (" attr(title) ")";
-  }
+	abbr[title]:after {
+		content: " (" attr(title) ")";
+	}
 
-  .ir a:after,
-  a[href^="javascript:"]:after,
-  a[href^="#"]:after {
-    content: "";
-  }
+	.ir a:after,
+	a[href^="javascript:"]:after,
+	a[href^="#"]:after {
+		content: "";
+	}
 
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    padding-right: 1em;
-    page-break-inside: avoid;
-  }
+	pre,
+	blockquote {
+		border: 1px solid var(--dark_grey);
+		padding-right: 1em;
+		page-break-inside: avoid;
+	}
 
-  tr,
-  img {
-    page-break-inside: avoid;
-  }
+	tr,
+	img {
+		page-break-inside: avoid;
+	}
 
-  img {
-    max-width: 100% !important;
-  }
+	img {
+		max-width: 100% !important;
+	}
 
-  @page :left {
-    margin: 15mm 20mm 15mm 10mm;
-  }
+	@page :left {
+		margin: 15mm 20mm 15mm 10mm;
+	}
 
-  @page :right {
-    margin: 15mm 10mm 15mm 20mm;
-  }
+	@page :right {
+		margin: 15mm 10mm 15mm 20mm;
+	}
 
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
+	p,
+	h2,
+	h3 {
+		orphans: 3;
+		widows: 3;
+	}
 
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
+	h2,
+	h3 {
+		page-break-after: avoid;
+	}
 }
 nav ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    overflow: hidden;
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	overflow: hidden;
 }
 nav ul li {
-    /* This allow us to arrange list items in a row, without using float */
-    display: inline-block;
-    list-style-type: none;
+	/* This allow us to arrange list items in a row, without using float */
+	display: inline-block;
+	list-style-type: none;
 }
 /* Create a style for the first level items */
 nav > div > ul > li > a {
-    color: #333 !important;
-    display: block;
-    line-height: 2em;
-    padding: 0.5em 0em;
-    text-decoration: none;
+	color: var(--fg) !important;
+	display: block;
+	line-height: 2em;
+	padding: 0.5em 0em;
+	text-decoration: none;
 }
 
 nav > div.nav-right > ul > li > a {
-    padding: 0.5em 0.5em;
+	padding: 0.5em 0.5em;
 }
 
 nav > div > ul > li > a:hover {
-    color: #aaa !important;
+	color: var(--fg) !important;
 }
 .nav-left {
-    float: left;
+	float: left;
 }
 
 .nav-left ul li {
-    float: left;
+	float: left;
 }
 
 .nav-right ul li {
-    float: right;
+	float: right;
 }
 .logo {
-    margin-right: 0.5em
+	margin-right: 0.5em
 }
 article img {
-    margin: 1em 0;
+	margin: 1em 0;
 }
 p.date {
-    font-size: 13px;
-    color: #666;
+	font-size: 13px;
+	color: var(--fg);
 }
 ul.articles {
-    list-style: none;
-    padding: 0;
+	list-style: none;
+	padding: 0;
+}
+
+ul.articles li {
+	padding-bottom: 10px;
 }
 #Articles {
-    margin-top: 2em;
+	margin-top: 2em;
 }
 footer {
-    font-size: 13px;
+	font-size: 13px;
 }
