--- a/Margaret_files/style.css
+++ b/Margaret_files/style.css
@@ -31,7 +31,7 @@ html {
 
 body {
 	color: var(--fg);
-	font-family: "Comic Sans MS", "Comic Sans";
+	font-family: 'Fira Code';
 	font-size: 12px;
 	line-height: 1.5em;
 	padding: 1em;
