back to open sans
Messing around with some Font's I'll be finding the perfect 90s font for my site one day

--- a/Margaret_files/style.css
+++ b/Margaret_files/style.css
@@ -31,7 +31,7 @@ html {
 
 body {
 	color: var(--fg);
-	font-family: 'Fira Code';
+	font-family: 'Open Sans';
 	font-size: 12px;
 	line-height: 1.5em;
 	padding: 1em;
